--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>RISC 360</head>
     <body>
         <div class='video' id='videooculto' style="display: none;">
-            <video src="texturas/CampusBloco1 (1).mp4" type='video/mp4; codecs="theora, vorbis"'></video>
+            <video src="texturas/CampusBloco1 (1).mp4" controls='controls' type='video/mp4; codecs="theora, vorbis"'></video>
             </div>
         <script src="/build/three.js"></script>
       <script src="/build/three.interaction.js"></script>
