--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
             cube.name = 'cubo';
             cube.position.set( 20, -1, 1);
 	
-    const panorama = new PANOLENS.ImagePanorama( 'texturas/risc-img1.jpg' );
-    const panorama2 = new PANOLENS.ImagePanorama( 'texturas/risc-img2.jpg')
-    const panorama3 = new PANOLENS.ImagePanorama( 'texturas/bloco1e2.jpeg')
-    const panorama4 = new PANOLENS.ImagePanorama( 'texturas/bloco1e2.jpeg')
-    const panorama5 = new PANOLENS.ImagePanorama( 'texturas/bloco1e2.jpeg')
-    const panorama6 = new PANOLENS.ImagePanorama( 'texturas/bloco1e2.jpeg')
+    const panorama = new PANOLENS.ImagePanorama( 'texturas/scene.jpg' );
+    const panorama2 = new PANOLENS.ImagePanorama( 'texturas/scene(1).jpg')
+    const panorama3 = new PANOLENS.ImagePanorama( 'texturas/scene(2).jpeg')
+    const panorama4 = new PANOLENS.ImagePanorama( 'texturas/scene(3).jpeg')
+    const panorama5 = new PANOLENS.ImagePanorama( 'texturas/scene(4).jpeg')
+    const panorama6 = new PANOLENS.ImagePanorama( 'texturas/scene(5).jpeg')
     const viewer = new PANOLENS.Viewer();
     viewer.add( panorama);
     //viewer.add(cube);
-    viewer.add( panorama2);
+    viewer.add( panorama2, panoroma3, panoroma4, panorama5, panorama6);
     
     panorama.link( panorama2, new THREE.Vector3( 20, -1, 1 ) ,3, '/texturas/linkage.gif' )
+    panorama2.link( panorama3, new THREE.Vector3( 20, -1, 1 ) ,3, '/texturas/linkage.gif' )
+    panorama2.link( panorama1, new THREE.Vector3( -20, -1, 1 ) ,3, '/texturas/linkage.gif' )
+    panorama3.link( panorama4, new THREE.Vector3( 20, -1, 1 ) ,3, '/texturas/linkage.gif' )
     </script>
     </body>
 </html>
