--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             cube.name = 'cubo';
             cube.position.set( 20, -1, 1);
 	
-    const panorama = new PANOLENS.ImagePanorama( 'texturas/scene.jpg' );
-    const panorama2 = new PANOLENS.ImagePanorama( 'texturas/scene(1).jpg')
-    const panorama3 = new PANOLENS.ImagePanorama( 'texturas/scene(2).jpeg')
-    const panorama4 = new PANOLENS.ImagePanorama( 'texturas/scene(3).jpeg')
-    const panorama5 = new PANOLENS.ImagePanorama( 'texturas/scene(4).jpeg')
-    const panorama6 = new PANOLENS.ImagePanorama( 'texturas/scene(5).jpeg')
+    const panorama = new PANOLENS.ImagePanorama( 'texturas/scene.jpeg' );
+    const panorama2 = new PANOLENS.ImagePanorama( 'texturas/scene (1).jpg')
+    const panorama3 = new PANOLENS.ImagePanorama( 'texturas/scene (2).jpeg')
+    const panorama4 = new PANOLENS.ImagePanorama( 'texturas/scene (3).jpeg')
+    const panorama5 = new PANOLENS.ImagePanorama( 'texturas/scene (4).jpeg')
+    const panorama6 = new PANOLENS.ImagePanorama( 'texturas/scene (5).jpeg')
     const viewer = new PANOLENS.Viewer();
     viewer.add( panorama);
     //viewer.add(cube);
